[#167097626] fix Removed hint and changed label and icon spacing from 16px to 8px

--- a/components/consumer/mobile/button/style.scss
+++ b/components/consumer/mobile/button/style.scss
@@ -72,7 +72,7 @@
       }
 
       span {
-        padding: 0 0 0 16px;
+        padding: 0 0 0 8px;
       }
     }
 
